--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3453,7 +3453,7 @@ input[type=radio] {
   }
 
   .is-sticky {
-    position: static;
+    position: fixed;
     -webkit-animation: none;
     animation: none;
   }
