--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2830,8 +2830,8 @@ input[type=radio] {
 .navbar .nav__item .nav__item-link:before {
   content: '';
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 20px;
+  left: -10px;
   right: 0;
   width: 0;
   height: 2px;
