--- a/assets/scss/global/_vars.scss
+++ b/assets/scss/global/_vars.scss
@@ -1,7 +1,7 @@
 // Sass Variables
 
 $color-primary: #47a145;
-$color-secondary: #0e2b3d;
+$color-secondary: #000000;
 $color-tertiary: #264050;
 $color-body: #9b9b9b;
 $color-dark: #222222;
