--- a/assets/scss/module/_testimonial.scss
+++ b/assets/scss/module/_testimonial.scss
@@ -214,7 +214,7 @@
         .testimonial__desc {
             font-size: 15px;
             font-weight: 700;
-            color: #0e2b3d;
+            color: #000000;
             margin-bottom: 0;
         }
 
