--- a/assets/scss/module/_footer.scss
+++ b/assets/scss/module/_footer.scss
@@ -2,7 +2,7 @@
     Footer
 --------------------------*/
 .footer {
-    background-color: #0a2d43;
+    background-color: #47a145;
 
     .footer-primary {
         padding-top: 130px;
