--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,8 +83,8 @@ a:hover {
 
 section {
   position: relative;
-  /* padding-top: 110px; */
-  padding-bottom: 110px;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 
 img {
