--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2144,7 +2144,7 @@ input[type=radio] {
   font-size: 15px;
   font-weight: 700;
   line-height: 1;
-  color: #9b9b9b;
+  color: #fff;
 }
 
 .nav-tabs .nav__link:last-of-type {
